fix layout of SQL showcase on mobile screen (#678)

--- a/src/css/index/menu.module.css
+++ b/src/css/index/menu.module.css
@@ -85,3 +85,9 @@
     bottom: -5rem;
   }
 }
+
+@media (max-width: 450px) {
+  .menu__button {
+    font-size: calc(var(--font-size-small) - 3px);
+  }
+}
