--- a/src/css/index/showcase.module.css
+++ b/src/css/index/showcase.module.css
@@ -235,3 +235,10 @@
     opacity: 1;
   }
 }
+
+@media (max-width: 450px) {
+  :global(.prism-code.language-questdb-sql) > div {
+    white-space: pre-line;
+    padding: 1rem;
+  }
+}
